--- a/templates/fr/adress/adress3.html
+++ b/templates/fr/adress/adress3.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block body %}
 <div class="pers-fields">
-    <form action="/{{language}}/gez/adress" method="POST">
+    <form action="/{{language}}/gez/adress3" method="POST">
         <h1> Adresse 3 sur 5</h1>
         <li>
             <label for="adress_additions">Additions d'adresse (facultatif) :</label>
