--- a/templates/fr/sepa/sepa3.html
+++ b/templates/fr/sepa/sepa3.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block body %}
 
-<form action="/{{language}}/gez/sepa" method="POST">
+<form action="/{{language}}/gez/sepa3" method="POST">
     <h1>Mandat de prélèvement SEPA 3 sur 4</h1>
     <ul>
         <li>
