--- a/templates/fr/adress/adress4.html
+++ b/templates/fr/adress/adress4.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block body %}
 <div class="pers-fields">
-    <form action="/{{language}}/gez/adress" method="POST">
+    <form action="/{{language}}/gez/adress4" method="POST">
         <h1> Adresse 4 sur 5</h1>
         <ul> <li>
             <label for="zip_code">Code postal:</label>
