--- a/templates/fr/adress/adress5.html
+++ b/templates/fr/adress/adress5.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block body %}
 <div class="pers-fields">
-    <form action="/{{language}}/gez/adress" method="POST">
+    <form action="/{{language}}/gez/adress5" method="POST">
         <h1> Adresse 5 sur 5</h1>
         <ul>
         <li>
