--- a/templates/fr/final.html
+++ b/templates/fr/final.html
@@ -1,4 +1,4 @@
-{% extends 'en/en_base.html' %}
+{% extends 'fr/fr_base.html' %}
 
 
 {% block head %}
@@ -10,13 +10,13 @@
 <hr>
 <h2> Please remember that we still need your signature and the date as validation! This is where you have to sign in! <details>
     <summary>This is how it looks like!</summary>
-    <img src="/images/Part_3.png" class="image">
+    <img src="{{url_for('static', filename='images/Part_3.png')}}" class="image">
     </details>
     <br> </h2>
     
 <p>If you need any kind of additional help, please do not hestitate to reach out the helpline <a href="https://www.mannheim.de/de/service-bieten/integration-migration/anima-ankommen-in-mannheim"></a>ANIMA </a></p>
 <p>
-    If you would like to fill out any other document, please click <a href="/en/gez/home">here</a>.
+    If you would like to fill out any other document, please click <a href="/{{language}}/home">here</a>.
 </p>
 
 {% endblock %}
