--- a/templates/fr/fr_base.html
+++ b/templates/fr/fr_base.html
@@ -29,16 +29,11 @@
         <div class="topnav" id="myTopnav">
             <a href="/en/home" class="active">Domicile</a>
             <a href="">Des documents</a>
-            <div class="dropdown">
-                <button class="dropbtn">Langues
-                    <i class="fa fa-caret-down"></i>
-                </button>
-                <div class="dropdown-content">
-                    <a href="?lang=en">English</a>
-                    <a href="?lang=de">German</a>
-                    <a href="?lang=bg">Bulgarian</a>
-                    <a href="?lang=fr">Français</a>
-                </div>
+            <div class="flags">
+                <a href="?lang=en"> <img src="{{url_for('static', filename='images/us.png')}}"> </a>
+                <a href="?lang=de"> <img src="{{url_for('static', filename='images/de.png')}}"> </a>
+                <a href="?lang=bg"> <img src="{{url_for('static', filename='images/bg.png')}}"> </a>
+                <a href="?lang=fr"> <img src="{{url_for('static', filename='images/fr.png')}}"> </a>
             </div>
             <a href="/en/about">À propos</a>
             <a href="">Se déconnecter</a>
