--- a/templates/en/en_base.html
+++ b/templates/en/en_base.html
@@ -47,5 +47,12 @@
     <!-- Example: <h1> Website </h1> -->
     {% block body %} {% endblock %}
 </body>
+<footer>
+    <div class="Navbar">
+         <a href="/Web_A-5_Project_Repo/templates/en/privacy_policy.html"> privacy policy</a>
+         <a href="/Web_A-5_Project_Repo/templates/en/legalNotice.html">Legal notice</a>
+    </div>
+    
+</footer>
 
 </html>
