--- a/templates/en/adress/adress4.html
+++ b/templates/en/adress/adress4.html
@@ -19,7 +19,7 @@
         </li>
         <li>
             <label for="city">City:</label>
-            <input type="text" id="city" name="city" pattern="[^0-9]*" required>
+            <input type="text" id="city" name="city" pattern="[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
             <span class="extra-info"><details><summary>Help?
 
             </summary>
