--- a/templates/bg/home.html
+++ b/templates/bg/home.html
@@ -12,7 +12,7 @@
                 <a href="">Адресна регистрация</a>
         </li>
         <li>
-                <a href="/bg/gez/general_information"> Адресна регистрация</a>
+                <a href="/{{language}}/gez/general_information"> Адресна регистрация</a>
         </li>
         <li>
                 <a href="">Защита на детето</a>
