--- a/templates/bg/welcome.html
+++ b/templates/bg/welcome.html
@@ -54,7 +54,7 @@
         
             <ul>
                 <li>
-                    <a href="/register">
+                    <a href="/{{language}}/register">
                         <p id="reg">Регистрация</p>
                     </a>
                     
