--- a/templates/bg/gez_explanation.html
+++ b/templates/bg/gez_explanation.html
@@ -1,24 +1,29 @@
 {% extends 'bg/bg_base.html' %}
 
-{% block start %} 
+{% block start %}
 <html lang="{{language}}">
 {% endblock %}
-{% block head %} 
-<title>Адресна регистрация</title> 
+{% block head %}
+<title>Адресна регистрация</title>
 {% endblock %}
 {% block body %}
-<h1>Добре дошли в нашия GEZ-help!</h1>
-<h2>Поискахте помощ за gez-документ.</h2>
-<p>Такса радио е таксата за излъчване тук, в Германия. Всеки апартамент трябва да го плати, така че няма как да избягате от него, ако искате да живеете в Германия.</p>
-<p>Въпреки че може да е досадно да плащате, трябва да попълните документа само веднъж, стига да живеете в настоящия си апартамент.</p>
-<h3>Разделяме документа на множество малки части.</h3>
-<ul>
-    <li>На първо място се нуждаем от вашата обща информация, като вашето име или рождената ви дата</li>
-    <li>На второ място се нуждаем от информация за Вашия адрес</li>
-    <li>След това трябва да знаем предпочитания от вас начин на плащане.</li>
-    <li>Ако искате да използвате SEPA, ние се нуждаем от вашата банкова информация. В противен случай трябва да изпратите парите сами.</li>
-    <li>И накрая, ако сте готови, просто трябва да подпишете документа и сте готови!</li>
-</ul>
-<h3> Ако искате да започнете сега, просто натиснете бутона за стартиране.</h3>
-<input type="submit" value="START" onclick="">
+<form action="/{{language}}/gez/gez_explanation" method="POST">
+    <h1>Добре дошли в нашия GEZ-help!</h1>
+    <h2>Поискахте помощ за gez-документ.</h2>
+    <p>Такса радио е таксата за излъчване тук, в Германия. Всеки апартамент трябва да го плати, така че няма как да
+        избягате от него, ако искате да живеете в Германия.</p>
+    <p>Въпреки че може да е досадно да плащате, трябва да попълните документа само веднъж, стига да живеете в настоящия
+        си апартамент.</p>
+    <h3>Разделяме документа на множество малки части.</h3>
+    <ul>
+        <li>На първо място се нуждаем от вашата обща информация, като вашето име или рождената ви дата</li>
+        <li>На второ място се нуждаем от информация за Вашия адрес</li>
+        <li>След това трябва да знаем предпочитания от вас начин на плащане.</li>
+        <li>Ако искате да използвате SEPA, ние се нуждаем от вашата банкова информация. В противен случай трябва да
+            изпратите парите сами.</li>
+        <li>И накрая, ако сте готови, просто трябва да подпишете документа и сте готови!</li>
+    </ul>
+    <h3> Ако искате да започнете сега, просто натиснете бутона за стартиране.</h3>
+    <input type="submit" value="START" onclick="">
+</form>
 {% endblock %}
