--- a/templates/bg/register.html
+++ b/templates/bg/register.html
@@ -5,7 +5,7 @@
 <title>Адресна регистрация</title>
 {% endblock %}
 {% block body %}
-<form action="/register" method="POST">
+<form action="/{{language}}/register" method="POST">
     <h1>Регистрация</h1>
     <ul>
         <li>
