--- a/templates/de/_final.html
+++ b/templates/de/_final.html
@@ -1,22 +1,22 @@
-{% extends 'en/en_base.html' %}
+{% extends 'de/de_base.html' %}
 
 
 {% block head %}
 <!-- <title> ... </title>-->
-<title> Welcome </title>
+<title> Willkommen </title>
 {% endblock %}
 {% block body %}
-<h1>Welcome </h1>
+<h1>Willkommen </h1>
 <hr>
-<h2> Please remember that we still need your signature and the date as validation! This is where you have to sign in! <details>
-    <summary>This is how it looks like!</summary>
+<h2> Vergiss bitte nicht das Sie noch das Dokument unterschreiben müssen!<details>
+    <summary>Hier müssen Sie unterschreiben!</summary>
     <img src="{{url_for('static', filename='images/Part_3.png')}}" class="image">
     </details>
     <br> </h2>
     
-<p>If you need any kind of additional help, please do not hestitate to reach out the helpline <a href="https://www.mannheim.de/de/service-bieten/integration-migration/anima-ankommen-in-mannheim"></a>ANIMA </a></p>
+<p>Wenn Ihnen irgendwas unklar geblieben ist, oder Sie weitere Fragen haben, kontaktieren Sie bitte eine Beratungsstelle wie die ANIMA unter <a href="https://www.mannheim.de/de/service-bieten/integration-migration/anima-ankommen-in-mannheim"></a>ANIMA </a></p>
 <p>
-    If you would like to fill out any other document, please click <a href="/{{language}}/gez/home">here</a>.
+    Wenn Sie irgnedwelche anderen Dokumente ausfüllen müssen, bitte klicken Sie <a href="/{{language}}/gez/home">hier</a>.
 </p>
 
 {% endblock %}
