--- a/templates/de/_welcome.html
+++ b/templates/de/_welcome.html
@@ -20,11 +20,10 @@
 <br>
 
 <p >
-    Our team is composed of 6 students, all in their third semester, from the Hochschule Mannheim in Germany. We use the
-    newest technology
-    we just learned in cooperation with our professor, as well as the <b id="welfare"> welfare faculty </b>from our
-    school to create this website /app/.<br>
-    If you want to learn more <b>about us </b>, you can find any necessary information <a href = "/{{language}}/about_us"> here</a>.
+    Unser Team besteht aus 6 Studenten der Hochschule Mannheim in Deutschland.
+    Wir nutzen unser gemeinsames Wissen und unsere Erfahrungen um in Kooperation mit unserer Fakultät für Sozialwesen für Sie diese Seite zu erstellen. <br>
+    Wenn Sie mehr erfahren wollen, <b>über jedes Mitglied unseres Team,</b> dann klicken Sie bitte 
+    <a href="/{{language}}/about_us"> hier</a>.
 </p>
 
 <p>
