--- a/templates/de/privacy_policy.html
+++ b/templates/de/privacy_policy.html
@@ -2,16 +2,18 @@
 
 
 {% block head %}
-<title> Privacy policy</title>
+<title> Datenschutz</title>
 {% endblock %}
 {% block body %}
 
-<h1>Privacy Policy for GEZ</h1>
+<h1>Datenschutz der GEZ</h1>
 
-<p>At GEZ-Help one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of
-    information that is collected and recorded by GEZ-Help and how we use it.</p>
+<p>Hier in unserem Projekt ist die Sicherheit ihrer privaten einer unserer top Prioritäten. Dieses Datenschutzdokument beinhaltet jegliche Art von 
+    Informtion die wir sammeln und wie wir diese auch nutzen.
+    </p>
 
-<p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.
+<p>Falls Sie weitere Fragen haben, bitte zögern Sie nicht uns zu kontaktieren
+
 </p>
 
 <p>This Privacy Policy applies only to our online activities and is valid for visitors to our website with regards to
