--- a/templates/en/welcome.html
+++ b/templates/en/welcome.html
@@ -20,7 +20,7 @@
 
     <p>
         Our team is composed of 6 students from the Hochschule Mannheim in Germany.
-        We use all of your knowledge and expeariance to create this website in cooperation with the welfare faculty from
+        We use all of your knowledge and experiance to create this website in cooperation with the welfare faculty from
         the Hochschule Mannheim. <br>
         If you want to learn more <b>about each member of our team </b>, you can click right here <a
             href="/{{language}}/about_us"> here</a>.
