--- a/templates/bg/register.html
+++ b/templates/bg/register.html
@@ -36,12 +36,12 @@
         </li>
         <li>
             <label for="fName">Първо име</label>
-            <input type="text" name="firstName" id="fName">
+            <input type="text" name="firstName" id="fName" pattern="\p{Alpha}*">
             <span>Напишете Вашето първо име тук</span>
         </li>
         <li>
             <label for="lastName">Фамилия</label>
-            <input type="text" name="lastName" id="lName">
+            <input type="text" name="lastName" id="lName" pattern="\p{Alpha}*">
             <span>Напишете Вашата фамилия име тук</span>
         </li>
         <li>
