--- a/templates/de/register.html
+++ b/templates/de/register.html
@@ -15,7 +15,7 @@
             <span>Wählen Sie ihren Benutzernamen.</span>
         </li>
         <li>
-            <label for="">Pwasswort</label>
+            <label for="">Passwort</label>
             <input type="password" name="" id="" required>
             <span>Bitte wählen Sie ihr Passwort.</span>
             <br>
@@ -37,12 +37,12 @@
         </li>
         <li>
             <label for="fName">Vorname</label>
-            <input type="text" name="firstName" id="fName">
+            <input type="text" name="firstName" id="fName" pattern="\p{Alpha}*">
             <span>Bitte gebn Sie ihren Vornamen ein.</span>
         </li>
         <li>
             <label for="lastName">Nachname</label>
-            <input type="text" name="lastName" id="lName">
+            <input type="text" name="lastName" id="lName" pattern="\p{Alpha}*">
             <span>Bitte geben Sie ihrem Nachnamen ein.</span>
         </li>
         <li>
