--- a/templates/en/adress/adress1.html
+++ b/templates/en/adress/adress1.html
@@ -14,7 +14,7 @@
                 <span> <details><summary>
                     Help?
                 </summary> 
-                    <p>Please enter the exact date that you have registered your adress in the City.
+                    <p>Please enter the exact date that you have registered your address in the City.
                     </p>
                 </details></span>
             </li>
