--- a/templates/fr/register.html
+++ b/templates/fr/register.html
@@ -37,12 +37,12 @@
         </li>
         <li>
             <label for="fName">Prénom</label>
-            <input type="text" name="firstName" id="fName">
+            <input type="text" name="firstName" id="fName" pattern="\p{Alpha}*">
             <span>Entrez votre prénom ici s'il vous plaît</span>
         </li>
         <li>
             <label for="lastName">Nom de famille</label>
-            <input type="text" name="lastName" id="lName">
+            <input type="text" name="lastName" id="lName" pattern="\p{Alpha}*">
             <span>Entrez votre nom ici s'il vous plaît</span>
         </li>
         <li>
