--- a/templates/de/adress/adress4.html
+++ b/templates/de/adress/adress4.html
@@ -10,7 +10,7 @@
         <ul>
             <li>
                 <label for="zip_code">PLZ:</label>
-                <input type="number" id="zip_code" name="zip_code" required>
+                <input type="number" id="zip_code" name="zip_code" pattern="[0-9]{5}$" required>
                 <span class="extra-info">
                     <details>
                         <summary>Hilfe?</summary>
@@ -20,7 +20,7 @@
             </li>
             <li>
                 <label for="city">Stadt:</label>
-                <input type="text" id="city" name="city" required>
+                <input type="text" id="city" name="city" pattern="[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
                 <span class="extra-info">
                     <details>
                         <summary>Hilfe?</summary>
