--- a/templates/de/sepa/sepa4.html
+++ b/templates/de/sepa/sepa4.html
@@ -10,7 +10,7 @@
     <ul>
         <li>
             <label for="IBAN">IBAN:</label>
-            <input type="text" id="IBAN" name="IBAN" required>
+            <input type="text" id="IBAN" name="IBAN" pattern="\p{Upper}{2}[0-9]{20}$" required>
             <span>
                 <details>
                     <summary>Hilfe?</summary>
@@ -20,7 +20,7 @@
         </li>
         <li>
             <label for="BIC">BIC:</label>
-            <input type="text" id="BIC" name="BIC" required>
+            <input type="text" id="BIC" name="BIC" pattern="[^\p{Lower}]{7,8}[0-9]{0,4}$" required>
             <span>
                 <details>
                     <summary>Hilfe?</summary>
@@ -30,7 +30,7 @@
         </li>
         <li>
             <label for="credit_institution">Kreditinstitut:</label>
-            <input type="text" id="credit_institution" name="credit_institution" required>
+            <input type="text" id="credit_institution" name="credit_institution" pattern="^\p{Alpha}[^0-9]*" required>
             <span>
                 <details>
                     <summary>Hilfe?</summary>
