--- a/templates/fr/sepa/sepa3.html
+++ b/templates/fr/sepa/sepa3.html
@@ -10,7 +10,7 @@
     <ul>
         <li>
             <label for="ZIP_code">Code postal:</label>
-            <input type="number" id="ZIP_code" name="ZIP_code" required>
+            <input type="number" id="ZIP_code" name="ZIP_code" pattern="[0-9]{5}$" required>
             <span><details>
                 <summary>
                     Aider?
