--- a/templates/de/_welcome.html
+++ b/templates/de/_welcome.html
@@ -82,7 +82,7 @@
 <div class="cookie-container">
     <p>
         Wir benutzen Cookies um ihnen die beste Erfahrung zu liefern und ihnen nur relevante Werbung zu zeigen. Um mehr zu erfahren, Clicken Sie Hier
-        <a href="templates/localized_pages/English/privacy_policy.html">Privacy Policy</a>.
+        <a href="templates/localized_pages/English/privacy_policy.html">Datenschutzrichtlinien</a>.
     </p>
 
     <button class="cookie-btn">
