--- a/templates/de/privacy_policy.html
+++ b/templates/de/privacy_policy.html
@@ -2,11 +2,11 @@
 
 
 {% block head %}
-<title> Datenschutz</title>
+<title> Datenschutzrichtlinien</title>
 {% endblock %}
 {% block body %}
 
-<h1>Datenschutz der GEZ</h1>
+<h1>Datenschutzrichtlinien der GEZ</h1>
 
 <p>Hier in unserem Projekt ist die Sicherheit ihrer privaten einer unserer top Prioritäten. Dieses Datenschutzdokument beinhaltet jegliche Art von 
     Informtion die wir sammeln und wie wir diese auch nutzen.
@@ -16,111 +16,72 @@
 
 </p>
 
-<p>This Privacy Policy applies only to our online activities and is valid for visitors to our website with regards to
-    the information that they shared and/or collect in GEZ-Help. This policy is not applicable to any information
-    collected offline or via channels other than this website.</p>
+<p>Dieses Datenschutzdokument gilt für unsere Onlineseite und ist gültig für Besucher unserer Seite für die Daten die Sie mit uns teilen für dieses Projekt.
+    Dieses Dokument ist nicht gültigfür jegliche offline Interaktionen oder über anderen Seiten als dieser Webseite.</p>
 
-<h2>Consent</h2>
+<h2>Einverständnis</h2>
 
-<p>By using our website, you hereby consent to our Privacy Policy and agree to its terms.</p>
+<p>Beim Nutzen unserer Seite willigen Sie unseren Datenschutzrichtlinien ein.</p>
 
-<h2>Information we collect</h2>
+<h2>Von uns zu sammelnde Informationen</h2>
 
-<p>The personal information that you are asked to provide, and the reasons why you are asked to provide it, will be made
-    clear to you at the point we ask you to provide your personal information.</p>
-<p>If you contact us directly, we may receive additional information about you such as your name, email address, phone
-    number, the contents of the message and/or attachments you may send us, and any other information you may choose to
-    provide.</p>
-<p>When you register for an Account, we may ask for your contact information, including items such as name, address,
-    email address, and telephone number.</p>
+<p>Die persönlichen Daten die wir von Ihnen fragen, und der Grund wieso wir diese von Ihnen verlangen,
+    wird Ihnen genauer erklärt wenn wir diese von Ihnen verlangen.</p>
+<p>Falls Sie uns direkt kontaktieren würden, würden wir weitere Informationen erhalten wie Ihren Namen, Ihre Email Adresse, Ihre Telefonnummer,
+    der Inhalt der Nachricht die Sie uns senden, und jegliche weitere Informationen die Sie uns bereitstellen würden.</p>
+<p>Wenn Sie sich registrieren, werden wir nach Ihren Kontaktinformationen fragen, darunter gehört Ihr Name, Adresse, Ihre Email-Adresse und Ihre Telefonnummer.</p>
 
-<h2>How we use your information</h2>
+<h2>Wie wir Ihre Informationen nutzen</h2>
 
-<p>We use the information we collect in various ways, including to:</p>
+<p>Wir Nutzen die Informationen die wir sammeln unter anderem um:</p>
 
 <ul>
-    <li>Provide, operate, and maintain our website</li>
-    <li>Improve, personalize, and expand our website</li>
-    <li>Understand and analyze how you use our website</li>
-    <li>Develop new products, services, features, and functionality</li>
-    <li>Communicate with you, either directly or through one of our partners, including for customer service, to provide
-        you with updates and other information relating to the website, and for marketing and promotional purposes</li>
-    <li>Send you emails</li>
-    <li>Find and prevent fraud</li>
+    <li>unsere Webseite weiterhin ausführen und anbieten zu können</li>
+    <li>unsere Webseite zu verbessern und sie für Sie angenehmer zu bereiten</li>
+    <li>zu verstehen und zu analysieren wie Sie unsere Webseite nutzen</li>
+    <li>neue Funktionen zu entwickeln und einen verbesserten Service anzubieten</li>
+    <li>Ihnen Emails zu senden</li>
+    <li>Betrüger zu finden und zu entlarven</li>
 </ul>
 
-<h2>Log Files</h2>
+<h2>Login Protokoll</h2>
 
-<p>GEZ-Help follows a standard procedure of using log files. These files log visitors when they visit websites. All
-    hosting companies do this and a part of hosting services' analytics. The information collected by log files include
-    internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit
-    pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable.
-    The purpose of the information is for analyzing trends, administering the site, tracking users' movement on the
-    website, and gathering demographic information.</p>
+<p>GEZ-Help verfolgt eine Standardprozedur für Login Protokolle. Diese Protokolle speichert sich die Logins der Benutzer auf dieser Seite.
+    Alle Datenhosting Unternehmen und einige nutzen solch ein Protokoll. Unter den gesammelten Daten zählen auch die genutzte IP-Adresse, 
+    den Browsertypen, den Internet Service Provider (ISP), Datum und Zeit des Logins, weitere referring/exit pages. Diese Daten
+    sind nicht verbunden mit irgendwelchen persönlichen Informationen die wir zuvor von Ihnen erhielten. Diese Daten werden genutzt um 
+    Aktivitäten auf der Seite zu analysieren, die Seite zu verwalten und demografische Daten zu sammeln.</p>
 
-<h2>Cookies and Web Beacons</h2>
+<h2>Cookies</h2>
 
-<p>Like any other website, GEZ-Help uses 'cookies'. These cookies are used to store information including visitors'
-    preferences, and the pages on the website that the visitor accessed or visited. The information is used to optimize
-    the users' experience by customizing our web page content based on visitors' browser type and/or other information.
+<p>Unsere Webseite nutzt "Cookies". Diese Cookies sammeln Informationen, unter anderem welches Dokument der Benutzer dieser
+    Seite auswählte und ausführte. Diese Informationen werden genutzt um die Seite für für den Benutzer der Seite zu optimieren.
 </p>
 
-<h2>Advertising Partners Privacy Policies</h2>
+<h2>Datenschutzrichtlinien von Drittpersonen</h2>
 
-<P>You may consult this list to find the Privacy Policy for each of the advertising partners of GEZ-Help.</p>
+<p>Unsere Datenschutzrichtlinien sind nicht auf anderen Webseiten wirksam. Wir empfehlen Ihnen sich die Datenschutzrichtlinien
+    dieser Seiten durchzugehen für genauere Informationen. Diese könnten andere Vorgehensweisen als unsere eigene Webseite nutzen. </p>
 
-<p>Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Web Beacons that are used in
-    their respective advertisements and links that appear on GEZ-Help, which are sent directly to users' browser. They
-    automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of
-    their advertising campaigns and/or to personalize the advertising content that you see on websites that you visit.
-</p>
+<p>Sie können unsere Cookies auch selbst über Ihren individuellen Browsereinstellungen löschen. Wenn Sie mehr über Ihren Cookie management
+    lesen wollen, finden Sie die notwendigen Informationen über der Webseite Ihres Browsers.</p>
 
-<p>Note that GEZ-Help has no access to or control over these cookies that are used by third-party advertisers.</p>
+<h2>Europäische Datenschutz-Grundversorgung(DSGVO)</h2>
 
-<h2>Third Party Privacy Policies</h2>
-
-<p>GEZ-Help's Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the
-    respective Privacy Policies of these third-party ad servers for more detailed information. It may include their
-    practices and instructions about how to opt-out of certain options. </p>
-
-<p>You can choose to disable cookies through your individual browser options. To know more detailed information about
-    cookie management with specific web browsers, it can be found at the browsers' respective websites.</p>
-
-<h2>CCPA Privacy Rights (Do Not Sell My Personal Information)</h2>
-
-<p>Under the CCPA, among other rights, Baden-Württemberg consumers have the right to:</p>
-<p>Request that a business that collects a consumer's personal data disclose the categories and specific pieces of
-    personal data that a business has collected about consumers.</p>
-<p>Request that a business delete any personal data about the consumer that a business has collected.</p>
-<p>Request that a business that sells a consumer's personal data, not sell the consumer's personal data.</p>
-<p>If you make a request, we have one month to respond to you. If you would like to exercise any of these rights, please
-    contact us.</p>
+<p>Unsere Webseite arbeitet unter den Rechtlinien des DSGVO.</p>
 
 <h2>GDPR Data Protection Rights</h2>
 
-<p>We would like to make sure you are fully aware of all of your data protection rights. Every user is entitled to the
-    following:</p>
-<p>The right to access – You have the right to request copies of your personal data. We may charge you a small fee for
-    this service.</p>
-<p>The right to rectification – You have the right to request that we correct any information you believe is inaccurate.
-    You also have the right to request that we complete the information you believe is incomplete.</p>
-<p>The right to erasure – You have the right to request that we erase your personal data, under certain conditions.</p>
-<p>The right to restrict processing – You have the right to request that we restrict the processing of your personal
-    data, under certain conditions.</p>
-<p>The right to object to processing – You have the right to object to our processing of your personal data, under
-    certain conditions.</p>
-<p>The right to data portability – You have the right to request that we transfer the data that we have collected to
-    another organization, or directly to you, under certain conditions.</p>
-<p>If you make a request, we have one month to respond to you. If you would like to exercise any of these rights, please
-    contact us.</p>
-
-<h2>Children's Information</h2>
-
-<p>Another part of our priority is adding protection for children while using the internet. We encourage parents and
-    guardians to observe, participate in, and/or monitor and guide their online activity.</p>
-
-<p>GEZ-Help does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you
-    think that your child provided this kind of information on our website, we strongly encourage you to contact us
-    immediately and we will do our best efforts to promptly remove such information from our records.</p>
+<p>Wir möchten sicherstellen, dass Sie alle Ihre Datenschutzrechte vollständig kennen. Jeder Benutzer hat Anspruch auf die
+    Folgendes:</p>
+<p>Zugriffsrecht - Sie haben das Recht, Kopien Ihrer persönlichen Daten anzufordern.</p>
+<p>Das Recht auf Berichtigung - Sie haben das Recht zu verlangen, dass wir alle Informationen korrigieren, die Sie für ungenau halten.
+    Sie haben auch das Recht zu verlangen, dass wir die Informationen vervollständigen, die Sie für unvollständig halten.</p>
+<p>Das Recht auf Löschung - Sie haben das Recht, unter bestimmten Bedingungen zu verlangen, dass wir Ihre persönlichen Daten löschen.</p>
+<p>Das Recht, die Verarbeitung einzuschränken - Sie haben das Recht zu verlangen, dass wir die Verarbeitung Ihrer persönlichen Daten einschränken 
+    bestimmten Umständen.</p>
+<p>Widerspruchsrecht - Sie haben unter bestimmten Bedingungen das Recht, der Verarbeitung Ihrer personenbezogenen Daten zu widersprechen.</p>
+<p>Das Recht auf Datenübertragbarkeit - Sie haben das Recht zu verlangen, dass wir die von uns gesammelten Daten unter bestimmten Bedingungen an eine andere Organisation oder direkt an Sie übertragen.</p>
+<p>Wenn Sie eine Anfrage stellen, haben wir einen Monat Zeit, um Ihnen zu antworten. Wenn Sie eines dieser Rechte ausüben möchten, kontaktieren Sie uns bitte.</p>
 
 {% endblock %}
