--- a/templates/en/en_base.html
+++ b/templates/en/en_base.html
@@ -53,10 +53,10 @@
     {% block body %} {% endblock %}
     <footer>
         <div>
-             <a href="/Web_A-5_Project_Repo/templates/en/privacy_policy.html"> privacy policy</a>
-             <a href="/Web_A-5_Project_Repo/templates/en/legalNotice.html">Legal notice</a>
+            <a href="/{{language}}/privacy_policy"> privacy policy</a>
+            <a href="/{{language}}/legal_notice">Legal notice</a>
         </div>
-        
+
     </footer>
 </body>
 
