--- a/templates/en/gez_explanation.html
+++ b/templates/en/gez_explanation.html
@@ -16,8 +16,12 @@
     <li>Afterwards we need to know your prefered payment method.</li>
     <li>If you like to use SEPA we need your banking information. Otherwise you have to send the money on your own.</li>
     <li>Finally, if you are done, you just have to sign the document and you are done!</li>
+    <li></li>
 </ul>
 <h3> If you like to start now, just press the start button.</h3>
-<input type="submit" value="START" onclick="">
+<ul>
+    <li><input type="submit" value="START" onclick=""></li>
+</ul>
+
 </form>
 {% endblock %}
