--- a/static/css/form.css
+++ b/static/css/form.css
@@ -1,3 +1,6 @@
+html{
+  height: 100%;
+}
 body {
     background-image: url('../images/blueBackground.png');
     background-repeat: no-repeat;
@@ -5,6 +8,8 @@ body {
     background-position: center;
     background-size: 100%;
     font-family: Arial, Helvetica, sans-serif;
+    position: relative;
+    min-height: 97%;
 }
 #welcometext{
   text-align: center;
@@ -397,5 +402,9 @@ p {
 footer{
   position: absolute;
   bottom: 0;
-  height: 30px;
+  right: 0;
+  left: 0;
+  height: 0px;
+  text-align: center;
+  border:1px solid #7DBDEA;
 }
