--- a/templates/en/en_base.html
+++ b/templates/en/en_base.html
@@ -52,10 +52,10 @@
     <!-- Example: <h1> Website </h1> -->
     {% block body %} {% endblock %}
     <footer>
-        <div>
+        
             <a href="/{{language}}/privacy_policy"> privacy policy</a>
-            <a href="/{{language}}/legal_notice">Legal notice</a>
-        </div>
+            <a href="/{{language}}/legal_notice">legal notice</a>
+        
 
     </footer>
 </body>
