--- a/templates/en/adress/adress3.html
+++ b/templates/en/adress/adress3.html
@@ -9,7 +9,7 @@
         <h1> Adress 3 of 5</h1>
         <li>
             <label for="adress_additions">Adress additions(optional) :</label>
-            <input type="text" id="adress_additions" name="adress_additions" required>
+            <input type="text" id="adress_additions" name="adress_additions">
             <span class="extra-info"><details><summary>
                 Help?
             </summary> 
