--- a/templates/en/general_information/general_information1.html
+++ b/templates/en/general_information/general_information1.html
@@ -14,7 +14,7 @@
             <span><details><summary>
                 Help?
             </summary> 
-                <p>Enter your gender here please </p>
+                <p>Please choose your gender here</p>
             </details></span>
         </li>
         <li>
